Bug 598650 - Increase JSGC_MAX_MALLOC_BYTES to 128MB, r=gal